<resources>
    <string name="app_name">Grafica</string>
    <string name="app_principal">Via Boleto</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="erro_conexao">Verifique a sua connexão com a internet</string>
    <string name="status_conexao_erro">O seu dispositivo não esta conectado a internet, as informaçoes apresentadas podem estar desatualizadas, para informaçoes mais precisas favor conecte-se a Internet</string>
    <string name="status_conexao_sucesso">O seu dispositivo esta conectado a internet, as informaçoes serão atualizadas</string>

    <!--*********************MENSAGENS TELA LOGIN-->
    <string name="login_titulo">Seja bem vindo, favor efetue o login</string>
    <string name="login_usuario">Usuário:</string>
    <string name="login_usuario_hint">Digite aqui o usuário</string>
    <string name="login_senha">Senha:</string>
    <string name="login_senha_hint">Digite aqui a senha</string>
    <string name="login_botao_login">Entrar</string>
    <string name="login_img_desc">Logo empresa</string>
    <string name="login_salvo">Usuario salvo</string>

    <!--*********************MENSAGENS ERRO-->
    <string name="login_erro">Erro ao efetuar Login: </string>
    <string name="erro_campos_brancos">Preencha os campos de usuario e senha</string>
    <string name="erro_campos_brancos_login">Favor preencher o campo de login</string>
    <string name="erro_campos_brancos_senha">Favor preencher o campo de senha</string>
    <string name="erro_usuario_senha">Verifique os campos de usuario e senha</string>

    <!--*********************Menu de Navegacao-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tela_principal_configuracoes_label">Configuraçoes</string>
    <string name="tela_principal_configurar_email_label">Configurar Email</string>
    <string name="tela_principal_vendas_por_dinheiro_label">Vendas por Dinheiro</string>
    <string name="tela_principal_vendas_por_cartao_de_credito_label">Vendas por cartão de Crédito</string>
    <string name="tela_principal_vendas_por_cartao_de_debito_label">Vendas por cartão de Débito</string>
    <string name="tela_principal_lista_produtos_label">Lista de Produtos</string>
    <string name="tela_principal_sair_label">Sair</string>


    <!--*********************MENSAGENS LISTA PRODUTOS-->
    <string name="lista_produtos_erro">Erro ao carregar Produtos: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meun_atualizar_label">Atualizar</string>
    <string name="tela_principal_opcoes_label">opçoes</string>
    <string name="tela_principal_logout_label">Logout</string>
    <string name="login_lembrar_usuario_label">Lembrar Usuario</string>
</resources>
