<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.via.boleto.grafica.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_img_desc"
                app:srcCompat="@drawable/ic_login" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_titulo"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_usuario"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/login_usuario_hint"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_senha"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"/>

            <EditText
                android:id="@+id/txt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/login_senha_hint"
                android:inputType="textPassword"
                android:maxLength="30" />

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_botao_login"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
